# random_name_generator_rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.claude/skills/sync-languages/: SKILL.md
.github/: dependabot.yml
.github/workflows/: CI.yaml  CI.yml  rust.yml
benches/: my_benchmark.rs
docs/: CODE_REVIEW.md  english_syllables.txt
src/: j.rs  lib.rs  main.rs  rng_dialect.rs  rng_join.rs  rng_joiner.rs  rng_joint.rs  rng_syllable.rs  rng_syllables.rs  rng_weighted_rnd.rs
src/languages/: Curse.txt  Demonic.txt  Elven.txt  FantasyRU.txt  German-curse.txt  GoblinRU.txt  Klingon.txt  Test-micro.txt  Test-tiny.txt  demonic.txt  elven-ru.txt  fantasy-ru.txt  roman-ru.txt  Фантазия.txt
