[package]
name = "random_name_generator"
description = "Random Name Generator"
version = "0.3.0"
authors = ["Christoph Baker <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/folkengine/random_name_generator_rs.git"
homepage = "https://github.com/folkengine/random_name_generator_rs"
edition = "2021"
rust-version = "1.64.0"  # MSRV
license = "BSD-3-Clause"
readme = "README.md"
exclude = [".github/workflows/*", "docs/*", ".gitignore", ".travis.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rnglib"
path = "src/lib.rs"

[[bin]]
name = "rng"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
bitflags = "1.2"
clap = { version = "4.1.6", features = ["cargo", "derive"] }
lazy_static = "1.4.0"
log = "0.4.11"
rand = "0.8.4"
regex = "1"
rust-embed = "6.3.0"
titlecase = "2.2.1"

[dev-dependencies]
criterion = "0.4.0"
proptest = "1.0.0"
rstest = "0.16.0"

[[bench]]
name = "my_benchmark"
harness = false
