[package]
name = "random_name_generator"
description = "Random Name Generator"
version = "0.3.6"
authors = ["Christoph Baker <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/folkengine/random_name_generator_rs.git"
homepage = "https://github.com/folkengine/random_name_generator_rs"
edition = "2021"
rust-version = "1.70.0"  # MSRV
license = "BSD-3-Clause"
readme = "README.md"
exclude = [".devcontainer/*", ".github/*", "docs/*", ".gitignore", ".travis.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rnglib"
path = "src/lib.rs"

[[bin]]
name = "rng"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
bitflags = "2.4.0"
clap = { version = "4.4.3", features = ["cargo", "derive"] }
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.9.5"
rust-embed = "8.0.0"
titlecase = "2.2.1"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.2.0"
rstest = "0.18.2"

[[bench]]
name = "my_benchmark"
harness = false
