[package]
name = "random_name_generator"
description = "Random Name Generator"
version = "0.4.0"
authors = ["Christoph Baker <gaoler@electronicpanopticon.com>"]
repository = "https://github.com/folkengine/random_name_generator_rs.git"
homepage = "https://github.com/folkengine/random_name_generator_rs"
edition = "2024"
rust-version = "1.85.0"  # MSRV — first release with Rust 2024 edition support
license = "BSD-3-Clause"
readme = "README.md"
exclude = [".devcontainer/*", ".github/*", "docs/*", ".gitignore", ".travis.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rnglib"
path = "src/lib.rs"

[[bin]]
name = "rng"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.104"
bitflags = "2.13.1"
clap = { version = "4.6.2", features = ["cargo", "derive"] }
log = "0.4.33"
rand = "0.10.2"
regex = "1.13.1"
# debug-embed: embed language files even in debug builds; avoids crashes on devices like Android
rust-embed = { version = "8.12.0", features = ["debug-embed"] }
titlecase = "3.6.0"

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.11.0"
rstest = "0.26.1"

[[bench]]
name = "my_benchmark"
harness = false

[lints.clippy]
unwrap_used = "deny"
